--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <% if logged_in? %>
+    <p>Logged in as <%= current_user.username %></p>
+    <%= button_to "Logout", session_url, method: :delete %>
+  <% else %>
+    <%= link_to "Login", new_session_url %> |
+    <%= link_to "Sign Up", new_user_url %>
+  <% end %>
+
 <%= yield %>
 
 </body>
